--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         deserunt reprehenderit.
     </p>
 
-    <img src="../img/free.jpeg" alt="Poster" width="250px">
+    <img src="img/free.jpeg" alt="Poster" width="250px">
 
     <hr>
 
